# hackers-week

./: .gitignore  KRAKEN.md  README.md  requirements.txt
python/: .gitignore  README.md  app.py  requirements.txt  trader.py
rust/: .gitignore  .justfile  Cargo.toml  README.md
rust-orderbook/: Cargo.toml  README.md
rust-orderbook/src/: app.rs  binance.rs  main.rs  ui.rs
rust/src/: app.rs  binance.rs  main.rs  ui.rs
